force-app/main/default/objects/ZuoraCustomizationPlugin__c/ZuoraCustomizationPlugin__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Registration of custom plugins for division-specific functionality</description>
    <label>Zuora Customization Plugin</label>
</CustomObject>