force-app/main/default/objects/ZuoraCustomizationPlugin__c/fields/Implementation_Class__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Class__c</fullName>
    <description>The apex class name of the implementation</description>
    <inlineHelpText>The apex class name of the implementation</inlineHelpText>
    <label>Implementation Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>