force-app/main/default/objects/ZuoraCustomizationPlugin__c/fields/NCR_Division__c.field-meta.xml
<CustomField>
    <fullName>NCR_Division__c</fullName>
    <description>The NCR division value - should match the Opportunity classification value</description>
    <inlineHelpText>The NCR division value - should match the Opportunity classification value</inlineHelpText>
    <label>NCR Division</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>