force-app/main/default/objects/ZuoraCustomizationPlugin__c/fields/Plugin_Type__c.field-meta.xml
<CustomField>
    <fullName>Plugin_Type__c</fullName>
    <defaultValue>&quot;INCRDefaultValuePlugin&quot;</defaultValue>
    <description>INCRDefaultValuePlugin is the only one supported so far</description>
    <inlineHelpText>INCRDefaultValuePlugin is the only one supported so far</inlineHelpText>
    <label>Plugin Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>